name: engine-io-snap
version: 1.0.7
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This package provides an @engine-io@ @ServerAPI@ that is compatible with
  <http://snapframework.com Snap>.

library
  exposed-modules:
    Network.EngineIO.Snap

  build-depends:
      io-streams
    , base
    , bytestring
    , containers
    , engine-io
    , lifted-base
    , snap-core
    , unordered-containers
    , websockets
    , websockets-snap

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
