name: engine-io-wai
version: 1.0.9
synopsis: An @engine-io@ @ServerAPI@ that is compatible with @Wai@
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Brandon Martin
maintainer: brandon@codedmart.com
category: Network
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10
description:
    This package provides an @engine-io@ @ServerAPI@ that is compatible with
    <https://hackage.haskell.org/package/wai/ Wai>.

extra-source-files: Changelog.md

library
    exposed-modules:
        Network.EngineIO.Wai

    build-depends:
          base
        , engine-io
        , http-types
        , unordered-containers
        , wai
        , text
        , bytestring
        , websockets
        , wai-websockets
        , mtl
        , either
        , transformers
        , transformers-compat
        , attoparsec

    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -O2
