name: engine-io-yesod
version: 1.0.4
license: BSD3
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
category: Network
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10
description:
  This package provides an @engine-io@ @ServerAPI@ that is compatible with
  <http://www.yesodweb.com/ Yesod>.

library
  exposed-modules:
    Network.EngineIO.Yesod

  build-depends:
     base
   , yesod-core
   , monad-control
   , engine-io
   , http-types
   , unordered-containers
   , wai
   , text
   , bytestring
   , conduit
   , conduit-extra
   , websockets
   , wai-websockets
   , unliftio-core

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
