name: engine-io
version: 1.2.22
synopsis: A Haskell implementation of Engine.IO
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10
description:
  This library provides a Haskell implementation of
  <https://github.com/Automattic/engine.io Engine.IO>, a library for real-time
  client-server communication on the web. Engine.IO works with old browsers via
  XHR long-polling, and seamlessy upgrades to web sockets. This implementation
  supports the majority of the Engine.IO protocol, including text and binary
  packets and the upgrading protocol.

extra-source-files: Changelog.md

library
  exposed-modules:
    Network.EngineIO

  other-extensions:
   RankNTypes, OverloadedStrings, RecordWildCards

  build-depends:
      aeson
    , async
    , attoparsec
    , base
    , base64-bytestring
    , bytestring
    , errors
    , free
    , monad-loops
    , mwc-random
    , stm
    , stm-delay
    , text
    , transformers
    , unordered-containers
    , vector
    , websockets

  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -Wall -O2 -fwarn-incomplete-uni-patterns
