name: socket-io
version: 1.3.11
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This library provides an implementation of <http://socket.io Socket.io>
  protocol (version 1). It builds on top of Engine.IO, allowing Socket.io to
  work with both long polling XHR requests, and seamlessly upgrading them to
  HTML 5 web sockets.

library
  exposed-modules:
    Network.SocketIO

  other-extensions:
    FlexibleContexts, OverloadedStrings, RankNTypes

  build-depends:
      aeson
    , attoparsec
    , base
    , bytestring
    , engine-io
    , mtl
    , stm
    , text
    , transformers
    , unordered-containers
    , vector

  hs-source-dirs: src
  default-language: Haskell2010
